# monopack

./: .gitignore  CHANGELOG.md  LICENSE  README.md  flake.nix  pyproject.toml
docs/: cli.md  publishing.md  testing-fixtures.md
src/monopack/: __main__.py  build.py  cli.py  discovery.py  graph.py  imports.py  inline_config.py  module_resolver.py  package_manager.py  requirements.py  test_mode.py  validation.py  verifier.py
src/monopack.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: helpers.py  test_build.py  test_build_integration.py  test_cli.py  test_cli_integration.py  test_discovery.py  test_graph.py  test_imports.py  test_inline_config.py  test_module_resolver.py  test_package.py  test_package_manager.py  test_requirements.py  test_test_mode.py  test_verifier.py
tests/fixtures/auto_fix_first_party/app/hidden/: runtime_dep.py
tests/fixtures/auto_fix_first_party/packs/: users_get.py
tests/fixtures/auto_fix_third_party/packs/: users_get.py
tests/fixtures/config_overrides/app/hidden/: runtime_dep.py
tests/fixtures/config_overrides/packs/: users_get.py
tests/fixtures/cycles/app/cycle/: alpha.py  beta.py
tests/fixtures/cycles/functions/: users_get.py
tests/fixtures/distribution_aliases/functions/: users_get.py
tests/fixtures/dynamic_literal_imports/app/hidden/: runtime_dep.py
tests/fixtures/dynamic_literal_imports/packs/: users_get.py
tests/fixtures/from_import_submodule/app/shared/: auth.py
tests/fixtures/from_import_submodule/app/users/: service.py
tests/fixtures/from_import_submodule/functions/: users_get.py
tests/fixtures/kitchen_sink/: requirements.txt
tests/fixtures/kitchen_sink/app/billing/: charge.py
tests/fixtures/kitchen_sink/app/reports/: generator.py
tests/fixtures/kitchen_sink/app/shared/: auth.py  formatters.py  runtime_flags.py
tests/fixtures/kitchen_sink/app/users/: service.py
tests/fixtures/kitchen_sink/packs/: reports_refresh.py  users_get.py
tests/fixtures/monorepo_split/functions/: billing_charge.py  users_get.py
tests/fixtures/relative_imports/: requirements.txt
tests/fixtures/relative_imports/packs/: users_get.py
tests/fixtures/shared_code/packs/: users_get.py
tests/fixtures/simple/functions/: users_get.py
tests/fixtures/test_mode/functions/: users_get.py
tests/fixtures/test_mode/tests/: test_users.py
tests/fixtures/type_checking_imports/packs/: users_get.py
(+20 files in other folders)
