[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "monopack"
version = "0.2.0"
description = "Build focused Python Lambda function bundles from source imports."
readme = {file = "README.md", content-type = "text/markdown"}
license = "MIT"
authors = [{name = "monopack maintainers"}]
keywords = ["aws-lambda", "build", "dependency-analysis", "packaging", "python"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]
requires-python = ">=3.12"

[project.urls]
Homepage = "https://pypi.org/project/monopack/"
Repository = "https://pypi.org/project/monopack/"
Issues = "https://pypi.org/project/monopack/"

[project.optional-dependencies]
dev = [
    "build>=1.2.0",
    "twine>=5.0.0",
]

[project.scripts]
monopack = "monopack.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
